--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "prisma generate && next build",
-    "start": "next start",
-    "lint": "eslint",
-    "prisma:generate": "prisma generate", 
-    "prisma:studio": "prisma studio", 
-    "prisma:migrate:dev": "prisma migrate dev", 
-    "prisma:migrate:deploy": "prisma migrate deploy"
+  "dev": "next dev",
+  "build": "prisma generate && prisma migrate deploy && next build",
+  "start": "next start",
+  "lint": "next lint",
+  "prisma:generate": "prisma generate",
+  "prisma:studio": "prisma studio",
+  "prisma:migrate:dev": "prisma migrate dev",
+  "prisma:migrate:deploy": "prisma migrate deploy",
+  "prisma:reset": "prisma migrate reset"
   },
   "dependencies": {
     "@prisma/client": "6.14.0",
@@ -33,8 +34,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.0",
     "prisma": "^6.14.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
