--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
   "dev": "next dev",
-  "build": "prisma generate && prisma migrate deploy && next build",
+  "build": "next build",
   "start": "next start",
-  "lint": "next lint",
+  "lint": "eslint",
+  "postinstall": "prisma generate",
   "prisma:generate": "prisma generate",
   "prisma:studio": "prisma studio",
   "prisma:migrate:dev": "prisma migrate dev",
